# UXWallet

./: .gitignore  CLAUDE.md  README.md
.context/: best-practices.md  diagrams.md  lif-rust-integration.md  project-context.md  sequence-diagrams.md
backend/: .cursorrules  .env.example  .gitignore  TESTING.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.integration.config.ts
backend/.context/01_product/: product.md  (+2 more)
backend/prisma/: schema.prisma
backend/src/: app.ts  index.ts
contracts/: .cursorrules  .gitignore  README.md  foundry.toml
contracts/.context/: README.md
contracts/script/: Counter.s.sol  DeployFlywheelProtocol.s.sol  DeployMockERC20.s.sol  SessionKeyRegistry.s.sol
contracts/src/: LifiAdapter.sol  UXOriginSettler.sol
contracts/test/: Counter.t.sol  FlyWheelSettler.t.sol  FlywheelWorkflow.t.sol  IntentSettler.t.sol  SessionKeyRegistry.t.sol  UXOriginSettler.t.sol
frontend/: .env.example  .gitignore  .prettierignore  CLAUDE.md  app.json  babel.config.js  eslint.config.js  jest.config.js  metro.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  yellow.skill
frontend/__tests__/: app-renders.test.tsx  smoke.test.ts
frontend/app/: +not-found.tsx  _layout.tsx  _layout.web.tsx  index.tsx
frontend/docs/: development-backlog.md  flywheel-brand-strategy.md  flywheel-frontend-prd.md  implementation-records.md  uxwallet-brand-strategy.md  uxwallet-frontend-prd.md
lif-rust/: Cargo.toml  README.md
lif-rust/src/: error.rs  lifi_client.rs  main.rs  types.rs  uxwallet_codec.rs
(+245 files in other folders)
